# terracheck

./: .envrc  Cargo.toml  README.md  build.rs  fern.yaml  other.tf  rds_size.md  sample.tf
crates/document/: Cargo.toml
crates/document/src/: ast.rs  lib.rs  rule.rs
crates/report/: Cargo.toml
crates/report/src/: lib.rs
crates/terraform/: Cargo.toml  build.rs
crates/terraform/src/: lib.rs
rules/: rds_size.md
src/: check.rs  document.rs  main.rs  report.rs  terraform.rs
src/commands/: check.rs  mod.rs  show.rs
src/document/: ast.rs  mod.rs  operations.rs  rule.rs
tree-sitter-hcl2/: .gitignore  fern.yaml  foo.tf  grammar.js  index.js  package-lock.json  package.json  query.txt
tree-sitter-hcl2-light/: .gitignore  grammar.js  sample.tf
tree-sitter-hcl2/test/: skipped.txt
tree-sitter-hcl2/test/corpus/: data.txt  locals.txt  modules.txt  resources.txt  simple_resource.txt  variables.txt
tree-sitter-hcl2/test/corpus/query-lang/: definition.txt
