[package]
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"
name = "terracheck"
version = "0.1.0"

[workspace]
members = [
  ".",
  "crates/*",
]

default-members = [
  ".",
  "crates/*",
]

[build-dependencies]
cc = "1.0.61"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"


[dependencies]
glob = "0.3.0"
tree-sitter = "0.17.0"
argh = "0.1.3"
colored = "2.0.0"
pulldown-cmark = "0.8.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
regex = "1.3.9"
lazy_static = "1.4.0"
tinytemplate = "1.1.0"
terraform = { path = "./crates/terraform" }

[dev-dependencies]
pretty_assertions = "0.6.1"

