[package]
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"
name = "terracheck"
version = "0.1.0"

[workspace]
members = [
  ".",
  "crates/*",
]

default-members = [
  ".",
  "crates/*",
]

[dependencies]
argh = "0.1.3"
colored = "2.0.0"
glob = "0.3.0"

# internal dependencies
terraform = { path = "./crates/terraform" }
document = { path = "./crates/document" }
report = { path = "./crates/report" }

[dev-dependencies]
pretty_assertions = "0.6.1"

