[package]
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"
name = "document"
version = "0.0.1"

[dependencies]
lazy_static = "1.4.0"
pulldown-cmark = "0.8.0"
regex = "1.3.9"
tree-sitter = "0.17.0"

# internal dependencies
terraform = { path = "../terraform" }

[dev-dependencies]
pretty_assertions = "0.6.1"
