[package]
authors = ["Felipe Sere <felipesere@gmail.com>"]
edition = "2018"
name = "report"
version = "0.0.1"

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
tinytemplate = "1.1.0"

# internal dependencies
terraform = { path = "../terraform" }
document = { path = "../document" }
